fix: correct layout issues for mobile

--- a/signup_form/css/style.css
+++ b/signup_form/css/style.css
@@ -12,18 +12,16 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
-    height: 100vh;
     margin: 0;
     background-color: var(--light-bg);
 }
 
 .sidebar {
-    height: 100%;
-        background-image: url(../static/background.jpg);
-        background-position: center;
-        background-size: auto;
-        background-repeat: no-repeat;
-        height: 100%; 
+    background-image: url(../static/background.jpg);
+    background-position: center;
+    background-size: auto;
+    background-repeat: no-repeat;
+    height: 80vh; 
 }
 .logo {
     position: relative;
@@ -96,6 +94,7 @@
         justify-content: center;
         align-items: center;
         align-content: center;
+        height: 100vh;
     }
     .sidebar {
         width: 50vw;
